--- a/_posts/2018-03-03-erc721-in-action.md
+++ b/_posts/2018-03-03-erc721-in-action.md
@@ -8,7 +8,7 @@ title: 【技术分享】ERC721开发实战技术分享视频及ppt
 
 ### 技术分享现场视
 
-<embed src="https://imgcache.qq.com/tencentvideo_v1/playerv3/TPout.swf?max_age=86400&v=20161117&vid=z0600e0e0h8&auto=0" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+<embed src="https://imgcache.qq.com/tencentvideo_v1/playerv3/TPout.swf?max_age=86400&v=20161117&vid=z0600e0e0h8&auto=0" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"/>
 
 ### 活动相关报道
 
